--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,18 @@
 @import "tailwindcss";
+@import "../public/fonts/satoshi-sans/css/satoshi.css";
+@import "../public/fonts/morganite/css/morganite.css";
 
 :root {
-  --background: #ffffff;
+  --background: #F1F0F5;
   --foreground: #171717;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: 'Satoshi-Variable', ui-sans-serif, system-ui, sans-serif;
+  --font-mono: ui-monospace, 'SF Mono', 'Cascadia Code', 'Roboto Mono', Consolas, 'Courier New', monospace;
+  --font-morganite: 'Morganite';
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +25,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-sans);
 }
